K1J-1974: Apply Spotless code formatting